[package]
name = "istramet-cli"
version = "0.1.0"
authors = ["dejankos <kosdejan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
anyhow = "1.0"