[package]
name = "istramet-cli"
version = "0.1.4"
authors = ["dejankos <kosdejan@yahoo.com>"]
edition = "2018"
description = "Cli tool for fetching local weather forecast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
anyhow = "1.0"
prettytable-rs = "0.8.0"
structopt = "0.3.21"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "imet"
path = "src/main.rs"